# ocaml-dns

./: .gitignore  dns-client-eio.opam  dns-client-lwt.opam
client/: dns_client.mli
eio/client/: dns_client_eio.ml  dns_client_eio.mli  dune  ohost.ml
lwt/client/: dune  ohost.ml
